<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_music_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/str_img_Desc"
        android:src="@drawable/music_logo" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_music_logo"
        android:layout_margin="20dp"
        android:hint="@string/str_phone"
        android:inputType="phone"
        android:maxLength="10"
        android:minLines="1" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/str_enterPassword"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/b_login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_below="@id/et_password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/str_login"/>
    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_forgot_password"
        android:layout_below="@id/b_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_registerHere"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"/>
</RelativeLayout>